# Multimodal-voice-assistant

./: .gitignore  CLAUDE.md  README.md  assistant.py  pyproject.toml  requirements.txt  run.py
assistant/: __init__.py  __main__.py  core.py
assistant/config/: __init__.py  settings.py
assistant/context/: __init__.py  conversation.py  mcp.py
assistant/media/: __init__.py  screenshot.py  webcam.py
assistant/providers/: __init__.py
assistant/providers/llm/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
assistant/providers/tts/: __init__.py  base.py  kokoro_tts.py  openai_tts.py
assistant/speech/: __init__.py  audio.py  recognition.py
assistant/tools/: __init__.py  clipboard_tools.py  registry.py  search_tools.py  vision_tools.py
assistant/utils/: __init__.py  logging.py  messages.py
